minor responsive changes to podcast page.

--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -1,18 +1,22 @@
 <div class="row">
 
-    <div class="col-6">
+    <div class="col-sm-12 col-md-6">
         <img src="https://firebasestorage.googleapis.com/v0/b/gtgc-95335.appspot.com/o/Goblins%2Fgobbos.jfif?alt=media&token=eb467552-bbde-48e6-916b-418aef10d340" class="img-fluid">
     </div>
 
-    <div class="col-6">
+    <div class="col-sm-12 col-md-6">
         <div class="card">
-            <iframe src="https://open.spotify.com/embed-podcast/show/3m9ycjUwMbuDVIxpw4tojb" width="100%" height="232"
-                frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            
             <div class="card-body">
                 <p class="card-text">
-                    We record our podcast every Sunday evening, discussing the latest blah blah blah ... someone give me
-                    some blurb!
+                    We record our podcast every Sunday evening, join us as we discuss our hobbies, the club and tackle important questions like which primarch would wear crocs.
                 </p>
+                <p>
+                    You can listen to us on:
+                </p>
+                <p class="card-text"><a href="https://www.youtube.com/playlist?list=PLOlH2y12w6lQ0yFteccLT6yHMwNaT3fRH"><i class="fab fa-youtube"></i> Youtube</a></p>
+                <p class="card-text"><a href=""><i class="fab fa-spotify"></i> Spotify</a></p>
+                <p>Plus many other places you can find podcasts :)</p>
             </div>
         </div>
     </div>
