fixed some styling, created covid component, added headings to some pages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,10 @@
+<app-covid></app-covid>
+
 <div class="row">
     <div class="col-sm-12">
         <div class="card">
             <div class="card-body">
-                
+                <h4>The Gloucester Tabletop Gaming Community</h4>
                 <p>
                     We are the largest and friendliest gaming community in Gloucester and we meet every Tuesday evening from 19:00 at
                 </p>
