--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -1,22 +1,33 @@
 <div class="row">
 
-    <div class="col-sm-12 col-md-6">
-        <img src="https://firebasestorage.googleapis.com/v0/b/gtgc-95335.appspot.com/o/Goblins%2Fgobbos.jfif?alt=media&token=eb467552-bbde-48e6-916b-418aef10d340" class="img-fluid">
-    </div>
-
-    <div class="col-sm-12 col-md-6">
+    <div class="col-12">
         <div class="card">
             
             <div class="card-body">
-                <p class="card-text">
-                    We record our podcast every Sunday evening, join us as we discuss our hobbies, the club and tackle important questions like which primarch would wear crocs.
-                </p>
-                <p>
-                    You can listen to us on:
-                </p>
-                <p class="card-text"><a href="https://www.youtube.com/playlist?list=PLOlH2y12w6lQ0yFteccLT6yHMwNaT3fRH"><i class="fab fa-youtube"></i> Youtube</a></p>
-                <p class="card-text"><a href=""><i class="fab fa-spotify"></i> Spotify</a></p>
-                <p>Plus many other places you can find podcasts :)</p>
+
+                <h4>The GTGC: Dice and Tears Podcast</h4>
+
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <p class="card-text">
+                            We record our podcast every Sunday evening, join us as we discuss our hobbies, the club and tackle important questions like which primarch would wear crocs.
+                        </p>
+                        <p>
+                            You can listen to us on:
+                        </p>
+                        <p>
+                        <a target="_blank" class="listen-link" href="https://www.youtube.com/playlist?list=PLOlH2y12w6lQ0yFteccLT6yHMwNaT3fRH"><i class="icon fab fa-youtube youtube fa-2x"></i> Youtube</a>
+                        <a target="_blank" class="listen-link" href="https://open.spotify.com/show/3m9ycjUwMbuDVIxpw4tojb"><i class="icon fab fa-spotify spotify fa-2x"></i> Spotify</a>
+                        </p>
+                        <p>Plus many other places you can find podcasts</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/gtgc-95335.appspot.com/o/Goblins%2Fgobbos.jfif?alt=media&token=eb467552-bbde-48e6-916b-418aef10d340" class="img-fluid">
+                    </div>
+
+                </div>
+
+               
             </div>
         </div>
     </div>
