--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -6,36 +6,7 @@
 </div>
 
 
-<!--
-
-    TODO: Put this in a component;
-        args:  number of rows to show
-               condition to show.          
--->
-<div class="row" *ngIf="posts == null">
-    <div class="col-12 mt-3" >
-        <div class="card">
-            <div class="card-body">
-                <div class="article-loading">
-                    <div class="title"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 mt-3">
-        <div class="card">
-            <div class="card-body">
-                <div class="article-loading">
-                    <div class="title"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<app-text-loading [SectionCount]="3"  *ngIf="posts == null"></app-text-loading>
 
 <div class="row mt-3" *ngFor="let post of posts">
     <div class="col-12">
