--- a/src/app/blog/blogform/blogform.component.html
+++ b/src/app/blog/blogform/blogform.component.html
@@ -7,6 +7,7 @@
   </div>
   <div class="form-group">
     <editor
+      [init] = "options"
       [(ngModel)]="content"
       [ngModelOptions]="{standalone: true}"
       apiKey="y9xzcdl06zj339ysvj2423h35esbt0zcurkbn01eupvh8bo1"
