--- a/src/app/container/footer/footer.component.html
+++ b/src/app/container/footer/footer.component.html
@@ -2,7 +2,10 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-  
+          Find us on <br />
+          <a target="_blank" href="https://www.facebook.com/groups/Gloucestertabletopgamingcommunity" target="_blank"><i class="fab fa-facebook"></i> facebook</a>
+          <a target="_blank" href="https://www.instagram.com/glos_tabletop_gaming_community/" target="_blank"><i class="fab fa-instagram"></i> instagram</a>
+          <a target="_blank" href="https://www.youtube.com/channel/UCicWAlnxsjwg4nKvvibj67w" target="_blank"><i class="fab fa-youtube"></i> youtube</a>
         </div>
         <div class="col-12">
           &copy; Gloucester Tabletop Gaming Community 2020
