minor changes to contet

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
             <div class="card-body">
                 <h4 class="card-title">Welcome to the GTGC</h4>
                 <p class="card-text">
-                    Welcomes to the Gloucester Tabletop Gaming Community (GTGC) Website, we are a Gloucester based gaming community meeting every Tuesday at the Tuffley Comminty Centre.
+                    Welcome to the <b>Gloucester Tabletop Gaming Community</b> (GTGC) Website, we are a Gloucester based gaming community meeting every Tuesday at the Tuffley Comminty Centre.
                     Our members play a wide range of games from 40k to Dungeons and Dragons and everything inbetween, for more information click <a routerLink="/about">here</a>
                 </p>
             </div>
@@ -13,7 +13,7 @@
       
        
     </div>
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 mt-3 mt-md-0">
         <div class="card">
             <div class="card-body">
                 <a routerLink="/podcast"><img class="img-fluid" src="https://media.discordapp.net/attachments/699937809104109688/699938240203063356/GTGClogo.png" /></a>
