--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <app-covid></app-covid>
 <div class="row">
-    <div class="col-sm-12 col-md-6">
+    <div class="col-12">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Welcome to the GTGC</h4>
@@ -10,17 +10,28 @@
                 </p>
             </div>
         </div>
-      
-       
     </div>
-    <div class="col-sm-12 col-md-6 mt-3 mt-md-0">
+
+    <div class="col-12 mt-3">
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text">
+                    <img class="podcast-mic" src="https://i.imgur.com/Wjyh4nh.png"> 
+                    We also have a  <a routerLink="/podcast">podcast</a>, where members of the GTGC chat about their hobbies and our great community. Find out more <a routerLink="/podcast">here.</a>
+                </p>
+            </div>
+        </div>
+        
+    </div>
+
+    <!-- <div class="col-sm-12 col-md-6 mt-3 mt-md-0">
         <div class="card">
             <div class="card-body">
                 <a routerLink="/podcast"><img class="img-fluid" src="https://media.discordapp.net/attachments/699937809104109688/699938240203063356/GTGClogo.png" /></a>
             </div>
         </div>
       
-    </div>
+    </div> -->
 </div>
 
 
