changed how the podcast card is rendered on homepage.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,23 +15,16 @@
     <div class="col-12 mt-3">
         <div class="card">
             <div class="card-body">
-                <p class="card-text">
-                    <img class="podcast-mic" src="https://i.imgur.com/Wjyh4nh.png"> 
-                    We also have a  <a routerLink="/podcast">podcast</a>, where members of the GTGC chat about their hobbies and our great community. Find out more <a routerLink="/podcast">here.</a>
+                <p class="card-text d-flex flex-row align-items-center">
+                    <img class="podcast-mic mr-3" src="https://i.imgur.com/Wjyh4nh.png"> 
+                    <span class="">
+                        We also have a  <a routerLink="/podcast">podcast</a>, where members of the GTGC chat about their hobbies and our great community. Find out more <a routerLink="/podcast">here.</a>
+                    </span>
                 </p>
             </div>
         </div>
         
     </div>
-
-    <!-- <div class="col-sm-12 col-md-6 mt-3 mt-md-0">
-        <div class="card">
-            <div class="card-body">
-                <a routerLink="/podcast"><img class="img-fluid" src="https://media.discordapp.net/attachments/699937809104109688/699938240203063356/GTGClogo.png" /></a>
-            </div>
-        </div>
-      
-    </div> -->
 </div>
 
 
