re-ordered a few things for smaller screen sizes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,15 +4,21 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Welcome to the GTGC</h4>
-                <p class="card-text">
-                    Welcome to the <b>Gloucester Tabletop Gaming Community</b> (GTGC) Website, we are a Gloucester based gaming community meeting every Tuesday at the Tuffley Comminty Centre.
-                    Our members play a wide range of games from 40k to Dungeons and Dragons and everything inbetween, for more information click <a routerLink="/about">here</a>
-                </p>
+                
+                <div class="d-flex">
+                    <img class="gtgc-logo d-none d-md-flex" src="https://i.imgur.com/fniPBp9.png" />
+                    <p class="card-text">
+                        Welcome to the <b>Gloucester Tabletop Gaming Community</b> (GTGC) Website, we are a Gloucester based gaming community meeting every Tuesday at the Tuffley Comminty Centre.
+                        Our members play a wide range of games from 40k to Dungeons and Dragons and everything inbetween, for more information click <a routerLink="/about">here</a>
+                    </p>
+                </div>
+
+               
             </div>
         </div>
     </div>
 
-    <div class="col-12 mt-3">
+    <div class="col-12 mt-3 d-none d-md-flex">
         <div class="card">
             <div class="card-body">
                 <p class="card-text d-flex flex-row align-items-center">
