--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -8,7 +8,7 @@
                 <h4>The GTGC: Dice and Tears Podcast</h4>
 
                 <div class="row">
-                    <div class="col-sm-12 col-md-6">
+                    <div class="col-md-12 col-lg-6 order-1 order-lg-0">
                         <p class="card-text">
                             We record our podcast every Sunday evening, join us as we discuss our hobbies, the club and tackle important questions like which primarch would wear crocs.
                         </p>
@@ -21,7 +21,7 @@
                         </p>
                         <p>Plus many other places you can find podcasts</p>
                     </div>
-                    <div class="col-sm-12 col-md-6">
+                    <div class="col-md-12 col-lg-6 order-0 order-lg-1">
                         <img src="https://firebasestorage.googleapis.com/v0/b/gtgc-95335.appspot.com/o/Goblins%2Fgobbos.jfif?alt=media&token=eb467552-bbde-48e6-916b-418aef10d340" class="img-fluid">
                     </div>
 
