--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
         <div class="card">
             <div class="card-body">
                 <p class="card-text d-flex flex-row align-items-center">
-                    <img class="podcast-mic mr-3" src="https://i.imgur.com/Wjyh4nh.png"> 
+                    <img class="podcast-mic mr-3" src="https://i.imgur.com/Wjyh4nh.png" /> 
                     <span class="">
                         We also have a  <a routerLink="/podcast">podcast</a>, where members of the GTGC chat about their hobbies and our great community. Find out more <a routerLink="/podcast">here.</a>
                     </span>
