--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="col-12 mt-3 d-none d-md-flex">
+    <div class="col-12 mt-3 d-none d-md-block">
         <div class="card">
             <div class="card-body">
                 <p class="card-text d-flex flex-row align-items-center">
