--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row" *ngIf="auth.isPostEditor(user)">
     <div class="col-12">
         <a routerLink="/posts/new" class="btn btn-success"><i class="icon plus"></i>New Post</a>
     </div>
