--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-12 d-flex align-content-center flex-column">
-        <div class="card" style="width:30rem;">
+        <!-- <div class="card" style="width:30rem;">
             <div class="card-body">
-                <form>
+               
+                <form class="disable">
                     <div class="form-group">
                         <label>Email</label>
                         <input type="text" class="form-control" />
@@ -15,7 +16,12 @@
 
                 </form>
             </div>
+        </div> -->
+
+        <div class="alert alert-info">
+            More login options will be available soon. 
         </div>
+
         <div class="d-flex flex-column">
         <div class="btn btn-danger mt-3" style="width:30rem;" (click)="login_google()">
             <i class="fab fa-google"></i> Sign in with google
