--- a/src/app/container/footer/footer.component.html
+++ b/src/app/container/footer/footer.component.html
@@ -10,6 +10,9 @@
         <div class="col-12">
           &copy; Gloucester Tabletop Gaming Community 2020
         </div>
+        <div class="col-12">
+          <a routerLink="privacy">Privacy & Cookie Policy</a>
+        </div>
       </div>
   
     </div>
