--- a/src/app/container/nav/nav.component.html
+++ b/src/app/container/nav/nav.component.html
@@ -36,11 +36,11 @@
     </div>
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto" *ngIf="!(firebase.authState | async)">
-        <!-- <li>
-          <a class="nav-item" class="nav-link" routeLink="/signup">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLinkActive="active" routerLink="/signup">
             Signup
           </a>
-        </li> -->
+        </li>
         <li class="nav-item" routerLinkActive="active"> 
           <a class="nav-link" routerLinkActive="active" routerLink="/login" >
             Login
