--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -1,35 +1,37 @@
 <div class="row">
-    <div class="col-12 d-flex align-content-center flex-column">
-        <!-- <div class="card" style="width:30rem;">
+    <div class="col-12 offset-md-3 col-md-6 d-flex align-content-center flex-column">
+        <div class="card">
             <div class="card-body">
-               
-                <form class="disable">
+
+                <form  [formGroup]="userLoginForm" (ngSubmit)="onSubmit()">
+                  
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" class="form-control" />
+                        <input type="text" 
+                               class="form-control" 
+                               formControlName="email" />
                     </div>
                     <div class="form-group">
                         <label>Password</label>
                         <input type="password" class="form-control" />
                     </div>
-                    <input type="submit" value="Login" class="btn btn-primary" />
+                   
+                    <input type="submit" value="Login" class="btn btn-primary w-100" />
 
                 </form>
             </div>
-        </div> -->
-
-        <div class="alert alert-info">
-            More login options will be available soon. 
         </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-12 offset-md-3 col-md-6">
 
         <div class="d-flex flex-column">
-        <div class="btn btn-danger mt-3" style="width:30rem;" (click)="login_google()">
-            <i class="fab fa-google"></i> Sign in with google
+            <div class="btn btn-danger mt-3" (click)="login_google()">
+                <i class="fab fa-google"></i> Sign in with google
+            </div>
         </div>
-
-        <!-- <div class="btn btn-primary mt-3" style="width:30rem;" (click)="login_facebook()">
-            <i class="fab fa-facebook"></i> Sign in with facebook
-        </div> -->
-    </div>
     </div>
 </div>
