--- a/src/app/user/user-register/user-register.component.html
+++ b/src/app/user/user-register/user-register.component.html
@@ -1,1 +1,56 @@
-<p>user-register works!</p>
+<div class="row">
+    <div class="col-12 offset-md-3 col-md-6 d-flex align-content-center flex-column">
+        <div class="card">
+            <div class="card-body">
+
+                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                    <h3>Create Account</h3>
+                    <div class="form-group">
+                        <label>Display Name</label>
+                        <input type="text" 
+                               class="form-control" 
+                               [ngClass]="{'is-valid':displayName.valid, 'is-invalid': displayName.invalid && (displayName.dirt || displayName.touched)}" 
+                               formControlName="displayName" />
+                        <div class="invalid-feedback" *ngIf="displayName.invalid && (displayName.dirt || displayName.touched)">
+                            Display name is required
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" 
+                               class="form-control" 
+                               [ngClass]="{'is-valid':email.valid, 'is-invalid': email.invalid && (email.dirt || email.touched)}" 
+                               formControlName="email" />
+                        <div class="invalid-feedback" *ngIf="displayName.invalid && (displayName.dirt || displayName.touched)">
+                         Email is required
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" 
+                               class="form-control" 
+                               [ngClass]="{'is-valid':password.valid, 'is-invalid': password.invalid && (password.dirt || password.touched)}" 
+                               formControlName="password" />
+                        <div class="invalid-feedback" *ngIf="displayName.invalid && (displayName.dirt || displayName.touched)">
+                            Password is required
+                        </div>
+                    </div>
+                    <button type="submit" [disabled]="!registerForm.valid" class="btn btn-primary w-100">Create Account</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-12 offset-md-3 col-md-6">
+
+
+        <div class="d-flex flex-column">
+            <div class="btn btn-danger mt-3" (click)="login_google()">
+                <i class="fab fa-google"></i> Sign up with google
+            </div>
+        </div>
+    </div>
+</div>
