--- a/src/app/container/nav/nav.component.html
+++ b/src/app/container/nav/nav.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" routerLink="" >GTGC</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav"
+      aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="main_nav">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" data-toggle="collapse" data-target="#main_nav">
           <a routerLink="" class="nav-link">
             Home
           </a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a routerLink="/posts" class="nav-link">
+        <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
+          <a routerLink="/posts" data-toggle="collapse" class="nav-link">
             Posts
           </a>
         </li>
@@ -22,19 +22,19 @@
             Leagues
           </a>
         </li> -->
-        <li class="nav-item" routerLinkActive="active">
-          <a routerLink="/podcast" class="nav-link">
+        <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
+          <a routerLink="/podcast" data-toggle="collapse" class="nav-link">
             Podcast
           </a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a routerLink="/about" routerLinkActive="active" class="nav-link">
+        <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
+          <a routerLink="/about" routerLinkActive="active" data-toggle="collapse" class="nav-link">
             About
           </a>
         </li>
       </ul>
     </div>
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+    <!-- <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto" *ngIf="!(firebase.authState | async)">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLinkActive="active" routerLink="/signup">
@@ -55,5 +55,5 @@
           </a>
         </li>
       </ul>
-    </div>
+    </div> -->
   </nav>
