minor content changes

--- a/src/app/container/footer/footer.component.html
+++ b/src/app/container/footer/footer.component.html
@@ -1,19 +1,24 @@
-<footer class="footer mt-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          Find us on <br />
-          <a target="_blank" href="https://www.facebook.com/groups/Gloucestertabletopgamingcommunity" target="_blank"><i class="fab fa-facebook"></i> facebook</a>
-          <a target="_blank" href="https://www.instagram.com/glos_tabletop_gaming_community/" target="_blank"><i class="fab fa-instagram"></i> instagram</a>
-          <a target="_blank" href="https://www.youtube.com/channel/UCicWAlnxsjwg4nKvvibj67w" target="_blank"><i class="fab fa-youtube"></i> youtube</a>
-        </div>
-        <div class="col-12">
-          &copy; Gloucester Tabletop Gaming Community 2020
-        </div>
-        <div class="col-12">
-          <a routerLink="privacy">Privacy & Cookie Policy</a>
-        </div>
+<footer class="footer mt-4 mt-3 mb-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p class="mb-1">
+          <a target="_blank" href="https://www.facebook.com/groups/Gloucestertabletopgamingcommunity" target="_blank"><i
+              class="fab fa-facebook"></i> facebook</a>
+          <a target="_blank" href="https://www.instagram.com/glos_tabletop_gaming_community/" target="_blank"><i
+              class="fab fa-instagram"></i> instagram</a>
+          <a target="_blank" href="https://www.youtube.com/channel/UCicWAlnxsjwg4nKvvibj67w" target="_blank"><i
+              class="fab fa-youtube"></i> youtube</a>
+        </p>
+        <p class="mb-1">
+          This website is open source, contirbute or submit feature requests on <a href="https://github.com/johnchughes/gtgc-webapp"> github <i class="fab fa-github"></i></a>
+        </p>
+
+        <p class="mb-1"> 
+          &copy; Gloucester Tabletop Gaming Community 2020 - <a routerLink="privacy">Privacy & Cookie Policy</a>
+        </p>
       </div>
-  
     </div>
-  </footer>
+
+  </div>
+</footer>
