spelling is difficult

--- a/src/app/container/footer/footer.component.html
+++ b/src/app/container/footer/footer.component.html
@@ -11,7 +11,7 @@
               class="fab fa-youtube"></i> youtube</a>
         </p>
         <p class="mb-1">
-          This website is open source, contirbute or submit feature requests on <a href="https://github.com/johnchughes/gtgc-webapp"> github <i class="fab fa-github"></i></a>
+          This website is open source, contribute or submit feature requests on <a href="https://github.com/johnchughes/gtgc-webapp"> github <i class="fab fa-github"></i></a>
         </p>
 
         <p class="mb-1"> 
