removed out of date information.

--- a/src/app/container/nav/nav.component.html
+++ b/src/app/container/nav/nav.component.html
@@ -12,21 +12,21 @@
             Home
           </a>
         </li>
-        <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
+       <!--  <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
           <a routerLink="/posts" data-toggle="collapse" class="nav-link">
             Posts
           </a>
-        </li>
+        </li> -->
         <!-- <li class="nav-item" routerLinkActive="active">
           <a routerLink="/leagues" class="nav-link">
             Leagues
           </a>
         </li> -->
-        <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
+        <!-- <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
           <a routerLink="/podcast" data-toggle="collapse" class="nav-link">
             Podcast
           </a>
-        </li>
+        </li> -->
         <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#main_nav">
           <a routerLink="/about" routerLinkActive="active" data-toggle="collapse" class="nav-link">
             About
