--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-6 order-1 order-lg-0">
                         <p class="card-text">
-                            We record our podcast every Sunday evening, join us as we discuss our hobbies, the club and tackle important questions like which primarch would wear crocs.
+                            Periodically members of the GTGC get together and record their thoughts on tabletop gaming. 
                         </p>
                         <p>
                             You can listen to us on:
