--- a/src/app/container/nav/nav.component.html
+++ b/src/app/container/nav/nav.component.html
@@ -34,7 +34,7 @@
         </li>
       </ul>
     </div>
-    <!-- <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto" *ngIf="!(firebase.authState | async)">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLinkActive="active" routerLink="/signup">
@@ -49,10 +49,13 @@
       </ul>
       <ul class="navbar-nav ml-auto" *ngIf="(firebase.authState | async)">
         <li class="nav-item">
+          <span class="nav-link">{{displayName()}}</span>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="" (click)="logout()">
             Logout
           </a>
         </li>
       </ul>
-    </div> -->
+    </div>
   </nav>
