--- a/src/app/container/nav/nav.component.html
+++ b/src/app/container/nav/nav.component.html
@@ -35,7 +35,7 @@
       </ul>
     </div>
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto" *ngIf="!(firebase.authState | async)">
+      <!-- <ul class="navbar-nav ml-auto" *ngIf="!(firebase.authState | async)">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLinkActive="active" routerLink="/signup">
             Signup
@@ -46,10 +46,10 @@
             Login
           </a>
         </li>
-      </ul>
+      </ul> -->
       <ul class="navbar-nav ml-auto" *ngIf="(firebase.authState | async)">
         <li class="nav-item">
-          <span class="nav-link">{{displayName()}}</span>
+          <span class="nav-link">{{(authService.user$ | async)?.name}}</span>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="" (click)="logout()">
