--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control" />
+                        <input type="password" class="form-control" formControlName="password" />
                     </div>
                    
                     <input type="submit" value="Login" class="btn btn-primary w-100" />
