--- a/src/app/container/nav/nav.component.html
+++ b/src/app/container/nav/nav.component.html
@@ -37,8 +37,8 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <!-- <ul class="navbar-nav ml-auto" *ngIf="!(firebase.authState | async)">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLinkActive="active" routerLink="/signup">
-            Signup
+          <a class="nav-link" routerLinkActive="active" routerLink="/register">
+            Register
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active"> 
